--- a/public/css/site.css
+++ b/public/css/site.css
@@ -50,10 +50,6 @@
 	--background-lig-soft: 80%;
 }
 
-.DarkMode .header{
-	background: linear-gradient(90deg, hsl(var(--pri-hue) var(--pri-sat) var(--pri-lig)), hsl(var(--sec-hue) var(--sec-sat) var(--sec-lig)));
-}
-
 *,
 *::before,
 *::after {
@@ -107,6 +103,8 @@ body {
 	font-family: var(--font-family);
 	font-size: 1rem;
 	transition: background-color, color 0.18s;
+	margin: 0;
+	padding-top: 4rem;
 }
 
 h1{
@@ -117,6 +115,28 @@ h1{
 h2{
 	font-size: 1.5rem;
 	margin: 1rem 0;
+}
+hr{
+	height: 1px;
+	border: none;
+	background-color: hsl(var(--foreground-hue) var(--foreground-sat) var(--foreground-lig-soft));
+	margin: 0;
+	padding: 0;
+}
+.content {
+	padding: 2rem;
+	box-sizing: border-box;
+}
+
+.content .left {
+	width: 320px;
+}
+
+.content .right {
+	padding: 10px 0;
+	width: calc(100% - 320px);
+	font-size: 15px;
+	display: block;
 }
 
 a{
@@ -130,6 +150,13 @@ p{
 
 header{
 	background-color: hsl(var(--background-hue), var(--background-sat), var(--background-lig-soft));
+	display: block;
+	width: 100%;
+	height: 4rem;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 10;
 }
 
 header a{
@@ -166,6 +193,203 @@ section{
 .nav img{
 	width: 30px;
 	height: 30px;
+}
+
+.menu{
+	border-right: 1px solid rgba(0,0,0,0.1);
+	height: calc(100vh - 4rem);
+	top: 4rem;
+	position: fixed;
+	overflow-y: auto;
+	width: 220px;
+	padding-bottom: 2rem;
+}
+
+.menu .title{
+	display: block;
+	appearance: none;
+	cursor: pointer;
+	padding: 0.6rem 1rem;
+	width: 100%;
+	box-sizing: border-box;
+	font-weight: bold;
+	font-size: 1rem;
+	line-height: 1.1rem;
+	text-align: left;
+	background: transparent;
+	border: none;
+	outline: none;
+	color: hsl(var(--foreground-hue), var(--foreground-sat), calc(var(--foreground-lig) + 2%));
+}
+
+.menu .title:hover{
+	background-color: rgba(0,0,0,0.1);
+}
+
+.menu a{
+	display: block;
+	padding: 0.4rem 1rem 0.4rem 2rem;
+	width: 100%;
+	box-sizing: border-box;
+	font-size: 0.85rem;
+	color: hsl(var(--foreground-hue), var(--foreground-sat), calc(var(--foreground-lig) + 2%));
+}
+.menu a:hover{
+	background-color: rgba(0,0,0,0.1);
+}
+.submenu{
+	display: block;
+	width: 100%;
+	overflow: hidden;
+	height: 1px;
+}
+.active{
+	overflow: none;
+	height: auto;
+}
+
+footer{
+	display: block;
+	margin: 2rem;
+}
+footer p{
+	font-size: 0.7rem;
+	text-align: center;
+}
+
+
+pre{
+	tab-size: 1.5rem;
+}
+pre code.hljs {
+    display: block;
+    overflow-x: auto;
+    padding: 0.5rem;
+	font-family: monospace;
+	font-size: calc(1rem / 1.2);
+}
+code.hljs {
+    padding: 3px 5px;
+}
+pre code.hljs {
+    display: block;
+    overflow-x: auto;
+    padding: 1em;
+}
+code.hljs {
+    padding: 3px 5px;
+}
+
+/* DARK MODE*/
+.hljs {
+    background: #23241f;
+    color: #f8f8f2;
+}
+.hljs-subst,
+.hljs-tag {
+    color: #f8f8f2;
+}
+.hljs-emphasis,
+.hljs-strong {
+    color: #a8a8a2;
+}
+.hljs-bullet,
+.hljs-link,
+.hljs-literal,
+.hljs-number,
+.hljs-quote,
+.hljs-regexp {
+    color: #ae81ff;
+}
+.hljs-code,
+.hljs-section,
+.hljs-selector-class,
+.hljs-title {
+    color: #a6e22e;
+}
+.hljs-strong {
+    font-weight: 700;
+}
+.hljs-emphasis {
+    font-style: italic;
+}
+.hljs-attr,
+.hljs-keyword,
+.hljs-name,
+.hljs-selector-tag {
+    color: #f92672;
+}
+.hljs-attribute,
+.hljs-symbol {
+    color: #66d9ef;
+}
+.hljs-class .hljs-title,
+.hljs-params,
+.hljs-title.class_ {
+    color: #f8f8f2;
+}
+.hljs-addition,
+.hljs-built_in,
+.hljs-selector-attr,
+.hljs-selector-id,
+.hljs-selector-pseudo,
+.hljs-string,
+.hljs-template-variable,
+.hljs-type,
+.hljs-variable {
+    color: #e6db74;
+}
+.hljs-comment,
+.hljs-deletion,
+.hljs-meta {
+    color: #75715e;
+}
+
+/* LIGHT MODE*/
+.LightMode .hljs {
+    background: #eaeef3;
+    color: #00193a;
+}
+.LightMode .hljs-doctag,
+.LightMode .hljs-keyword,
+.LightMode .hljs-name,
+.LightMode .hljs-section,
+.LightMode .hljs-selector-tag,
+.LightMode .hljs-strong,
+.LightMode .hljs-title {
+    font-weight: 700;
+}
+.LightMode .hljs-comment {
+    color: #738191;
+}
+.LightMode .hljs-addition,
+.LightMode .hljs-built_in,
+.LightMode .hljs-literal,
+.LightMode .hljs-name,
+.LightMode .hljs-quote,
+.LightMode .hljs-section,
+.LightMode .hljs-selector-class,
+.LightMode .hljs-selector-id,
+.LightMode .hljs-string,
+.LightMode .hljs-tag,
+.LightMode .hljs-title,
+.LightMode .hljs-type {
+    color: #0048ab;
+}
+.LightMode .hljs-attribute,
+.LightMode .hljs-bullet,
+.LightMode .hljs-deletion,
+.LightMode .hljs-link,
+.LightMode .hljs-meta,
+.LightMode .hljs-regexp,
+.LightMode .hljs-subst,
+.LightMode .hljs-symbol,
+.LightMode .hljs-template-variable,
+.LightMode .hljs-variable {
+    color: #4c81c9;
+}
+.LightMode .hljs-emphasis {
+    font-style: italic;
 }
 
 @media (prefers-color-scheme: dark) {
