--- a/public/assets/skit-dist/skit.css
+++ b/public/assets/skit-dist/skit.css
@@ -51,6 +51,11 @@ body {
   padding-right: 0.5rem;
 }
 
+i[class^=fi-] {
+  display: inline-block;
+  vertical-align: top;
+}
+
 /*BUTTONS*/
 .btn {
   cursor: pointer;
