--- a/public/css/site.css
+++ b/public/css/site.css
@@ -26,6 +26,7 @@
 	--background-lig-soft: 20%;
 	--font-family: monospace;
 	--radius: 3px;
+	--virtual-top: 0px;
 }
 
 /* DARK MODE */
@@ -106,7 +107,7 @@ body {
 	font-size: 1rem;
 	transition: background-color, color 0.18s;
 	margin: 0;
-	padding-top: 4rem;
+	padding-top: calc(4rem + var(--virtual-top));
 }
 
 h1{
@@ -187,7 +188,7 @@ header{
 	width: 100%;
 	height: 4rem;
 	position: fixed;
-	top: 0;
+	top: var(--virtual-top);
 	left: 0;
 	z-index: 10;
 }
@@ -229,7 +230,7 @@ section{
 
 .menu{
 	border-right: 1px solid hsl(var(--foreground-hue) var(--foreground-sat) var(--foreground-lig-soft));;
-	top: 4rem;
+	top: calc(4rem + var(--virtual-top));
 	bottom: 0;
 	position: fixed;
 	overflow-y: hidden;
