--- a/public/css/site.css
+++ b/public/css/site.css
@@ -203,7 +203,7 @@ header a{
 	flex-wrap: wrap;
 	margin: auto;
 	width: 100%;
-	gap: 2rem;
+	gap: 1.4rem;
 	padding: 1rem 0;
 }
 
@@ -281,6 +281,12 @@ section{
 	width: 100%;
 	overflow: hidden;
 	height: 1px;
+}
+
+@media all and (max-width: 1023px){
+	.menu{
+		display: none;
+	}
 }
 .active{
 	overflow: none;
