23/12/2022 - Checkbox indeterminate on mobile

--- a/public/assets/skit-dist/skit.css
+++ b/public/assets/skit-dist/skit.css
@@ -12301,7 +12301,7 @@ i[class^=fi-] {
   font-size: var(--field-h);
 }
 .field .Checkbox:indeterminate::before {
-  content: "⊟";
+  content: "◫";
   line-height: calc(var(--field-h) - 0.3rem);
   font-family: var(--font-family);
   font-style: normal !important;
