--- a/public/assets/skit-dist/skit.css
+++ b/public/assets/skit-dist/skit.css
@@ -12117,8 +12117,6 @@ i[class^=fi-] {
   }
 }
 .Info {
-  color: hsl(var(--background-hue), var(--background-sat), var(--background-lig));
-  background-color: hsl(var(--foreground-hue), var(--foreground-sat), var(--foreground-lig));
   display: block;
   width: 100%;
   padding: var(--pd) calc(var(--pd) * 2);
@@ -12127,14 +12125,33 @@ i[class^=fi-] {
   font-size: 0.9rem;
 }
 
+.InfoLight {
+  color: hsl(var(--foreground-hue), var(--foreground-sat), var(--foreground-lig));
+  border: 1px solid hsl(var(--foreground-hue), var(--foreground-sat), var(--foreground-lig));
+  background-color: hsl(var(--background-hue), var(--background-sat), var(--background-lig));
+}
+
+.InfoDark {
+  color: hsl(var(--background-hue), var(--background-sat), var(--background-lig));
+  border: 1px solid hsl(var(--background-hue), var(--background-sat), var(--background-lig));
+  background-color: hsl(var(--foreground-hue), var(--foreground-sat), var(--foreground-lig));
+}
+
 .InfoWarning {
   color: hsl(35, var(--danger-sat), var(--danger-lig));
   border: 1px solid hsl(35, var(--danger-sat), var(--danger-lig));
   background-color: hsl(var(--light-hue), var(--light-sat), var(--light-lig));
 }
 
-.InfoWarningSolid {
+.InfoWarningStroke {
+  color: hsl(35, var(--danger-sat), var(--danger-lig));
+  border: 1px solid hsl(35, var(--danger-sat), var(--danger-lig));
+  background-color: hsl(var(--light-hue), var(--light-sat), var(--light-lig));
+}
+
+.InfoWarningFill {
   color: hsl(var(--light-hue), var(--light-sat), var(--light-lig));
+  border: 1px solid hsl(var(--light-hue), var(--light-sat), var(--light-lig));
   background-color: hsl(35, var(--danger-sat), var(--danger-lig));
 }
 
@@ -12144,8 +12161,15 @@ i[class^=fi-] {
   background-color: hsl(var(--light-hue), var(--light-sat), var(--light-lig));
 }
 
-.InfoPriSolid {
+.InfoPriStroke {
+  color: hsl(var(--pri-hue), var(--pri-sat), var(--pri-lig));
+  border: 1px solid hsl(var(--pri-hue), var(--pri-sat), var(--pri-lig));
+  background-color: hsl(var(--light-hue), var(--light-sat), var(--light-lig));
+}
+
+.InfoPriFill {
   color: hsl(var(--light-hue), var(--light-sat), var(--light-lig));
+  border: 1px solid hsl(var(--light-hue), var(--light-sat), var(--light-lig));
   background-color: hsl(var(--pri-hue), var(--pri-sat), var(--pri-lig));
 }
 
@@ -12155,8 +12179,15 @@ i[class^=fi-] {
   background-color: hsl(var(--light-hue), var(--light-sat), var(--light-lig));
 }
 
-.InfoSecSolid {
+.InfoSecStroke {
+  color: hsl(var(--sec-hue), var(--sec-sat), var(--sec-lig));
+  border: 1px solid hsl(var(--sec-hue), var(--sec-sat), var(--sec-lig));
+  background-color: hsl(var(--light-hue), var(--light-sat), var(--light-lig));
+}
+
+.InfoSecFill {
   color: hsl(var(--light-hue), var(--light-sat), var(--light-lig));
+  border: 1px solid hsl(var(--light-hue), var(--light-sat), var(--light-lig));
   background-color: hsl(var(--sec-hue), var(--sec-sat), var(--sec-lig));
 }
 
@@ -12166,8 +12197,36 @@ i[class^=fi-] {
   background-color: hsl(var(--light-hue), var(--light-sat), var(--light-lig));
 }
 
-.InfoDangerSolid {
+.InfoDangerStroke {
+  color: hsl(var(--danger-hue), var(--danger-sat), var(--danger-lig));
+  border: 1px solid hsl(var(--danger-hue), var(--danger-sat), var(--danger-lig));
+  background-color: hsl(var(--light-hue), var(--light-sat), var(--light-lig));
+}
+
+.InfoDangerFill {
   color: hsl(var(--light-hue), var(--light-sat), var(--light-lig));
+  border: 1px solid hsl(var(--light-hue), var(--light-sat), var(--light-lig));
+  background-color: hsl(var(--danger-hue), var(--danger-sat), var(--danger-lig));
+}
+
+.DarkMode .InfoWarning {
+  color: hsl(var(--light-hue), var(--light-sat), var(--light-lig));
+  border: 1px solid hsl(var(--light-hue), var(--light-sat), var(--light-lig));
+  background-color: hsl(35, var(--danger-sat), var(--danger-lig));
+}
+.DarkMode .InfoPri {
+  color: hsl(var(--light-hue), var(--light-sat), var(--light-lig));
+  border: 1px solid hsl(var(--light-hue), var(--light-sat), var(--light-lig));
+  background-color: hsl(var(--pri-hue), var(--pri-sat), var(--pri-lig));
+}
+.DarkMode .InfoSec {
+  color: hsl(var(--light-hue), var(--light-sat), var(--light-lig));
+  border: 1px solid hsl(var(--light-hue), var(--light-sat), var(--light-lig));
+  background-color: hsl(var(--sec-hue), var(--sec-sat), var(--sec-lig));
+}
+.DarkMode .InfoDanger {
+  color: hsl(var(--light-hue), var(--light-sat), var(--light-lig));
+  border: 1px solid hsl(var(--light-hue), var(--light-sat), var(--light-lig));
   background-color: hsl(var(--danger-hue), var(--danger-sat), var(--danger-lig));
 }
 
@@ -12175,6 +12234,7 @@ i[class^=fi-] {
   display: inline-block;
   vertical-align: top;
   position: relative;
+  -webkit-tap-highlight-color: transparent;
 }
 .field .label {
   display: block;
@@ -12271,7 +12331,6 @@ i[class^=fi-] {
   font-family: var(--font-family);
   font-style: normal !important;
   font-size: var(--field-h);
-  -webkit-tap-highlight-color: transparent;
 }
 .field .Radio::before {
   content: "○"; /*○●*/
@@ -12402,51 +12461,50 @@ i[class^=fi-] {
   border-radius: 0 0 0 0;
 }
 
-.toggle {
+.Toggle1 {
   position: relative;
   display: flex;
   align-content: center;
   min-width: 4rem;
   height: var(--field-h);
 }
-.toggle .Checkbox {
+.Toggle1 .Checkbox {
   cursor: pointer;
   border: none;
   outline: none;
 }
-.toggle .Checkbox::after {
+.Toggle1 .Checkbox::after {
   content: "" !important;
   width: 4rem;
   height: 2rem;
-  background-color: hsl(var(--pri-hue), var(--pri-sat), var(--pri-lig));
+  background-color: hsl(var(--foreground-hue), var(--foreground-sat), var(--foreground-lig));
   position: absolute;
   left: 0;
   z-index: 0;
   border-radius: 1.7rem;
 }
-.toggle .Checkbox::before {
-  content: "☼" !important;
+.Toggle1 .Checkbox::before {
+  content: "";
   text-align: center;
   font-size: 1.8rem;
   line-height: 1.8rem;
   font-weight: bold;
-  width: 1.7rem;
-  height: 1.7rem;
-  background-color: #888;
-  color: hsl(var(--background-hue), var(--background-sat), var(--background-lig));
+  width: 1.5rem;
+  height: 1.5rem;
+  background-color: hsl(var(--background-hue), var(--background-sat), var(--background-lig));
   border-radius: 50%;
   position: absolute;
-  top: 0.15rem;
-  left: 0.15rem;
+  top: 0.25rem;
+  left: 0.25rem;
   z-index: 1;
-  transition: 0.1s;
+  transition: 0.05s;
 }
-.toggle .Checkbox:checked::before {
-  content: "☽" !important;
+.Toggle1 .Checkbox:checked::before {
+  content: "";
   left: 2.1rem;
   transition: 0.1s;
 }
-.toggle .Checkbox + label {
+.Toggle1 .Checkbox + label {
   margin-left: 3rem;
 }
 
@@ -12468,7 +12526,7 @@ i[class^=fi-] {
   content: "";
   width: 100%;
   height: 3px;
-  background: hsl(var(--pri-hue), var(--pri-sat), var(--pri-lig));
+  background: hsl(var(--foreground-hue), var(--foreground-sat), var(--foreground-lig));
   z-index: 0;
   position: absolute;
   left: 0;
@@ -12501,8 +12559,8 @@ i[class^=fi-] {
   height: calc(var(--field-h) / 1.5);
   width: calc(var(--field-h) / 1.5);
   border-radius: 50%;
-  border: 2px solid #FFFFFF;
-  background: hsl(var(--pri-hue), var(--pri-sat), var(--pri-lig));
+  border: 2px solid hsl(var(--background-hue), var(--background-sat), var(--background-lig));
+  background: hsl(var(--foreground-hue), var(--foreground-sat), var(--foreground-lig));
   pointer-events: auto;
   z-index: 1;
   margin-top: calc(var(--field-h) / 4 * -1);
@@ -12515,8 +12573,8 @@ i[class^=fi-] {
   height: calc(var(--field-h) / 1.5);
   width: calc(var(--field-h) / 1.5);
   border-radius: 50%;
-  border: 2px solid #FFFFFF;
-  background: hsl(var(--pri-hue), var(--pri-sat), var(--pri-lig));
+  border: 2px solid hsl(var(--background-hue), var(--background-sat), var(--background-lig));
+  background: hsl(var(--foreground-hue), var(--foreground-sat), var(--foreground-lig));
   pointer-events: auto;
   z-index: 1;
   margin-top: calc(var(--field-h) / 4 * -1);
@@ -12561,7 +12619,6 @@ i[class^=fi-] {
   outline: none;
   cursor: pointer;
   touch-action: none;
-  accent-color: hsl(var(--pri-hue), var(--pri-sat), var(--pri-lig));
 }
 .field .Range:focus {
   outline: none;
@@ -12569,7 +12626,7 @@ i[class^=fi-] {
 .field .Range::-webkit-slider-runnable-track {
   width: 100%;
   box-shadow: none;
-  background: hsl(var(--pri-hue), var(--pri-sat), var(--pri-lig));
+  background: hsl(var(--foreground-hue), var(--foreground-sat), var(--foreground-lig));
   border-radius: var(--rd);
   border: none;
   height: 3px;
@@ -12577,7 +12634,7 @@ i[class^=fi-] {
 .field .Range::-moz-range-track {
   width: 100%;
   box-shadow: none;
-  background: hsl(var(--pri-hue), var(--pri-sat), var(--pri-lig));
+  background: hsl(var(--foreground-hue), var(--foreground-sat), var(--foreground-lig));
   border-radius: var(--rd);
   border: none;
   height: 3px;
@@ -12589,8 +12646,8 @@ i[class^=fi-] {
   height: calc(var(--field-h) / 1.5);
   width: calc(var(--field-h) / 1.5);
   border-radius: 50%;
-  border: 2px solid #FFFFFF;
-  background: hsl(var(--pri-hue), var(--pri-sat), var(--pri-lig));
+  border: 2px solid hsl(var(--background-hue), var(--background-sat), var(--background-lig));
+  background: hsl(var(--foreground-hue), var(--foreground-sat), var(--foreground-lig));
   pointer-events: auto;
   z-index: 1;
   margin-top: calc(var(--field-h) / 4 * -1);
@@ -12602,8 +12659,8 @@ i[class^=fi-] {
   height: calc(var(--field-h) / 1.5);
   width: calc(var(--field-h) / 1.5);
   border-radius: 50%;
-  border: 2px solid #FFFFFF;
-  background: hsl(var(--pri-hue), var(--pri-sat), var(--pri-lig));
+  border: 2px solid hsl(var(--background-hue), var(--background-sat), var(--background-lig));
+  background: hsl(var(--foreground-hue), var(--foreground-sat), var(--foreground-lig));
   pointer-events: auto;
   z-index: 1;
   margin-top: calc(var(--field-h) / 4 * -1);
@@ -13026,6 +13083,14 @@ i[class^=fi-] {
   grid-column: span 60;
 }
 
+@media all and (max-width: 1023px) {
+  .GridMobile {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .GridMobile *[class*=ColGrid] {
+    grid-column: span 1 !important;
+  }
+}
 .LoadLockScreen {
   position: fixed;
   display: flex;
