24/01/2023 - Add Donate by PIX

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -111,12 +111,22 @@ body {
 }
 
 h1{
-	font-size: 3rem;
+	font-size: 2rem;
 	margin: 1rem 0;
 }
 
 h2{
 	font-size: 1.5rem;
+	margin: 1rem 0;
+}
+
+h3{
+	font-size: 1.25rem;
+	margin: 1rem 0;
+}
+
+h4{
+	font-size: 1.125rem;
 	margin: 1rem 0;
 }
 hr{
@@ -162,7 +172,7 @@ p{
 .donates{
 	display: block;
 	margin: auto;
-	width: 45rem;
+	width: 90rem;
 	max-width: calc(100vw - 4rem);
 }
 
@@ -176,6 +186,10 @@ p{
 }
 
 .donate{
+	display: flex;
+	min-height: 15rem;
+	flex-direction: column;
+	justify-content: center;
 	padding: calc(var(--pd) * 3);
 	border-radius: var(--rd);
 	border: 1px solid hsl(var(--foreground-hue), var(--foreground-sat), var(--foreground-lig-soft));
@@ -337,36 +351,36 @@ pre{
 	tab-size: 1.5rem;
 }
 pre code.hljs {
-    display: block;
-    overflow-x: auto;
-    padding: 0.5rem;
+	display: block;
+	overflow-x: auto;
+	padding: 0.5rem;
 	font-family: monospace;
 	font-size: calc(1rem / 1.2);
 }
 code.hljs {
-    padding: 3px 5px;
+	padding: 3px 5px;
 }
 pre code.hljs {
-    display: block;
-    overflow-x: auto;
-    padding: 1em;
+	display: block;
+	overflow-x: auto;
+	padding: 1em;
 }
 code.hljs {
-    padding: 3px 5px;
+	padding: 3px 5px;
 }
 
 /* DARK MODE*/
 .hljs {
-    background: #23241f;
-    color: #f8f8f2;
+	background: #23241f;
+	color: #f8f8f2;
 }
 .hljs-subst,
 .hljs-tag {
-    color: #f8f8f2;
+	color: #f8f8f2;
 }
 .hljs-emphasis,
 .hljs-strong {
-    color: #a8a8a2;
+	color: #a8a8a2;
 }
 .hljs-bullet,
 .hljs-link,
@@ -374,34 +388,34 @@ code.hljs {
 .hljs-number,
 .hljs-quote,
 .hljs-regexp {
-    color: #ae81ff;
+	color: #ae81ff;
 }
 .hljs-code,
 .hljs-section,
 .hljs-selector-class,
 .hljs-title {
-    color: #a6e22e;
+	color: #a6e22e;
 }
 .hljs-strong {
-    font-weight: 700;
+	font-weight: 700;
 }
 .hljs-emphasis {
-    font-style: italic;
+	font-style: italic;
 }
 .hljs-attr,
 .hljs-keyword,
 .hljs-name,
 .hljs-selector-tag {
-    color: #f92672;
+	color: #f92672;
 }
 .hljs-attribute,
 .hljs-symbol {
-    color: #66d9ef;
+	color: #66d9ef;
 }
 .hljs-class .hljs-title,
 .hljs-params,
 .hljs-title.class_ {
-    color: #f8f8f2;
+	color: #f8f8f2;
 }
 .hljs-addition,
 .hljs-built_in,
@@ -412,18 +426,18 @@ code.hljs {
 .hljs-template-variable,
 .hljs-type,
 .hljs-variable {
-    color: #e6db74;
+	color: #e6db74;
 }
 .hljs-comment,
 .hljs-deletion,
 .hljs-meta {
-    color: #75715e;
+	color: #75715e;
 }
 
 /* LIGHT MODE*/
 .LightMode .hljs {
-    background: #eaeef3;
-    color: #00193a;
+	background: #eaeef3;
+	color: #00193a;
 }
 .LightMode .hljs-doctag,
 .LightMode .hljs-keyword,
@@ -432,10 +446,10 @@ code.hljs {
 .LightMode .hljs-selector-tag,
 .LightMode .hljs-strong,
 .LightMode .hljs-title {
-    font-weight: 700;
+	font-weight: 700;
 }
 .LightMode .hljs-comment {
-    color: #738191;
+	color: #738191;
 }
 .LightMode .hljs-addition,
 .LightMode .hljs-built_in,
@@ -449,7 +463,7 @@ code.hljs {
 .LightMode .hljs-tag,
 .LightMode .hljs-title,
 .LightMode .hljs-type {
-    color: #0048ab;
+	color: #0048ab;
 }
 .LightMode .hljs-attribute,
 .LightMode .hljs-bullet,
@@ -467,10 +481,10 @@ code.hljs {
 .LightMode .hljs-symbol,
 .LightMode .hljs-template-variable,
 .LightMode .hljs-variable {
-    color: #4c81c9;
+	color: #4c81c9;
 }
 .LightMode .hljs-emphasis {
-    font-style: italic;
+	font-style: italic;
 }
 
 @media (prefers-color-scheme: dark) {
