--- a/public/assets/skit-dist/skit.css
+++ b/public/assets/skit-dist/skit.css
@@ -12549,9 +12549,12 @@ i[class^=fi-] {
 }
 .field .Dualrange input[type=range] {
   appearance: none;
+  left: 0;
+  right: 0;
   position: absolute;
-  top: calc(var(--field-h) / 2 - 1px);
   z-index: 1;
+  top: 50%;
+  transform: translateY(-50%);
   background: none;
   pointer-events: none;
   outline: none;
@@ -12559,48 +12562,35 @@ i[class^=fi-] {
   margin: 0;
   padding: 0;
   width: 100%;
+  cursor: inherit;
 }
 .field .Dualrange input[type=range]::-webkit-slider-runnable-track, .field .Dualrange input[type=range]::-webkit-slider-thumb {
   appearance: none;
   background-color: transparent;
 }
 .field .Dualrange input[type=range]::-webkit-slider-thumb {
+  height: calc(var(--field-h) / 1.5);
+  width: calc(var(--field-h) / 1.5);
   appearance: none;
   box-shadow: none;
   cursor: inherit;
-  height: calc(var(--field-h) / 1.5);
-  width: calc(var(--field-h) / 1.5);
   border-radius: 50%;
   border: 2px solid hsl(var(--background-hue), var(--background-sat), var(--background-lig));
   background: hsl(var(--foreground-hue), var(--foreground-sat), var(--foreground-lig));
   pointer-events: auto;
   z-index: 1;
-  margin-top: calc(var(--field-h) / 4 * -1);
-  transform: translateY(-1px);
 }
 .field .Dualrange input[type=range]::-moz-range-thumb {
+  height: calc(var(--field-h) / 1.9);
+  width: calc(var(--field-h) / 1.9);
   appearance: none;
   box-shadow: none;
   cursor: inherit;
-  height: calc(var(--field-h) / 1.5);
-  width: calc(var(--field-h) / 1.5);
   border-radius: 50%;
   border: 2px solid hsl(var(--background-hue), var(--background-sat), var(--background-lig));
   background: hsl(var(--foreground-hue), var(--foreground-sat), var(--foreground-lig));
   pointer-events: auto;
   z-index: 1;
-  margin-top: calc(var(--field-h) / 4 * -1);
-  transform: translateY(-1px);
-}
-.field .Dualrange input[type=range]:first-child {
-  left: 0;
-  right: 0;
-  cursor: inherit;
-}
-.field .Dualrange input[type=range]:last-child {
-  left: 0;
-  right: 0;
-  cursor: inherit;
 }
 .field .Dualrange:hover {
   cursor: pointer;
@@ -12616,70 +12606,76 @@ i[class^=fi-] {
 }
 
 .field .Range {
-  border: none;
-  appearance: none;
-  margin: 0;
-  padding: 0;
+  position: relative;
   display: block;
-  font-family: var(--font-family);
-  font-size: var(--font-size);
-  color: hsl(var(--dark-hue), var(--dark-sat), var(--dark-lig));
-  background-color: transparent;
-  width: inherit;
   height: var(--field-h);
-  min-width: 1rem;
-  outline: none;
-  cursor: pointer;
+  min-width: 3rem;
+  width: inherit;
   touch-action: none;
 }
-.field .Range:focus {
+.field .Range::before {
+  content: "";
+  width: 100%;
+  height: 3px;
+  background: hsl(var(--foreground-hue), var(--foreground-sat), var(--foreground-lig));
+  z-index: 0;
+  position: absolute;
+  left: 0;
+  top: calc(var(--field-h) / 2);
+  transform: translateY(-1px);
+  border-radius: var(--rd);
+  cursor: inherit;
+}
+.field .Range input[type=range] {
+  appearance: none;
+  left: 0;
+  right: 0;
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  transform: translateY(-50%);
+  background: none;
+  pointer-events: none;
   outline: none;
-}
-.field .Range::-webkit-slider-runnable-track {
-  width: 100%;
-  box-shadow: none;
-  background: hsl(var(--foreground-hue), var(--foreground-sat), var(--foreground-lig));
-  border-radius: var(--rd);
   border: none;
-  height: 3px;
-}
-.field .Range::-moz-range-track {
+  margin: 0;
+  padding: 0;
   width: 100%;
-  box-shadow: none;
-  background: hsl(var(--foreground-hue), var(--foreground-sat), var(--foreground-lig));
-  border-radius: var(--rd);
-  border: none;
-  height: 3px;
+  cursor: inherit;
 }
-.field .Range::-webkit-slider-thumb {
+.field .Range input[type=range]::-webkit-slider-runnable-track, .field .Range input[type=range]::-webkit-slider-thumb {
+  appearance: none;
+  background-color: transparent;
+}
+.field .Range input[type=range]::-webkit-slider-thumb {
+  height: calc(var(--field-h) / 1.5);
+  width: calc(var(--field-h) / 1.5);
   appearance: none;
   box-shadow: none;
   cursor: inherit;
-  height: calc(var(--field-h) / 1.5);
-  width: calc(var(--field-h) / 1.5);
   border-radius: 50%;
   border: 2px solid hsl(var(--background-hue), var(--background-sat), var(--background-lig));
   background: hsl(var(--foreground-hue), var(--foreground-sat), var(--foreground-lig));
   pointer-events: auto;
   z-index: 1;
-  margin-top: calc(var(--field-h) / 4 * -1);
 }
-.field .Range::-moz-range-thumb {
+.field .Range input[type=range]::-moz-range-thumb {
+  height: calc(var(--field-h) / 1.9);
+  width: calc(var(--field-h) / 1.9);
   appearance: none;
   box-shadow: none;
   cursor: inherit;
-  height: calc(var(--field-h) / 1.5);
-  width: calc(var(--field-h) / 1.5);
   border-radius: 50%;
   border: 2px solid hsl(var(--background-hue), var(--background-sat), var(--background-lig));
   background: hsl(var(--foreground-hue), var(--foreground-sat), var(--foreground-lig));
   pointer-events: auto;
   z-index: 1;
-  margin-top: calc(var(--field-h) / 4 * -1);
 }
-.field .Range:disabled {
-  opacity: 0.5;
-  cursor: not-allowed !important;
+.field .Range:hover {
+  cursor: pointer;
+}
+.field .Range:disabled:hover, .field .Range:disabled::before {
+  cursor: not-allowed;
 }
 
 .SuperSelect {
